--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,14 @@
         }
     ],
     "license": "Apache License V2",
-    "require-dev": {
+    "require": {
         "phpunit/phpunit": "~4.4.1",
         "satooshi/php-coveralls": "~0.6.1",
         "symfony/finder": "~2.6.1",
         "symfony/process": "~2.6.1",
         "symfony/console": "~2.6.1"
     },
-    "autoload-dev": {
+    "autoload": {
         "psr-4": {
             "Delegator\\": "./src"
         },
