--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "license": "Apache License V2",
     "require": {
+        "php": ">=5.3.0",
         "phpunit/phpunit": "~4.4.1",
         "satooshi/php-coveralls": "~0.6.1",
         "symfony/finder": "~2.6.1",
