--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,17 @@
         "files": [
             "lib/FileIterator.php"
         ]
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~4.4.1",
+        "satooshi/php-coveralls": "~0.6.1"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Delegator\\": "./src"
+        },
+        "files": [
+            "lib/FileIterator.php"
+        ]
     }
 }
