--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,10 @@
     "autoload": {
         "psr-4": {
             "Delegator\\": "./src"
-        }
+        },
+        "files": [
+            "lib/FileIterator.php"
+        ]
     },
     "require-dev": {
         "phpunit/phpunit": "~4.4.1",
